# fastapi-init

./: .env.example  .gitignore  pyproject.toml
app/: main.py
app/api/: __init__.py
app/api/v1/: __init__.py
app/api/v1/ocr/: router.py
app/api/v1/token/: router.py
app/core/: celery.py  config.py  logging.py
app/core/dependencies/: auth.py  database.py  file.py  ocr.py
app/core/exceptions/: custom.py  handlers.py
app/core/utils/: file.py  http_client.py
app/infrastructure/database/: session.py
app/models/: __init__.py  ocr_job.py
app/module/ocr/: base.py  clovaocr.py  easyocr.py  paddleocr.py
app/repositories/: ocr.py
app/schemas/: base.py  enums.py
app/schemas/ocr/: request.py  response.py
app/schemas/token/: response.py
app/services/auth/: jwt.py
app/services/ocr/: job.py  module.py  ocr.py
app/worker/: celery_app.py
app/worker/tasks/: __init__.py  test.py
notebooks/: test.ipynb
tests/: test_sample.py
