# 모든 버전은 핀 고정 권장. 실제 설치 시에는 uv.lock에 박제된 transitive 의존성까지 포함해
# Dockerfile의 `uv sync --frozen`으로 재현성 있게 설치된다.
# pyproject.toml = 원하는 의존성 명세, uv.lock = 실제로 깐 정확한 버전 + 해시.
# 버전 미지정 항목(notebook 등)은 lock에 처음 박제된 시점의 버전이 그대로 유지됨.

[project]
name = "fastapi-ocr"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    # Web framework
    "fastapi==0.135.3",                 # ASGI 웹 프레임워크
    "uvicorn[standard]==0.44.0",        # ASGI 서버 (auto-reload, uvloop 등 포함)
    "python-multipart",                 # multipart/form-data 파싱 (파일 업로드)

    # Validation & settings
    "pydantic==2.13.0",                 # 데이터 검증 / 직렬화
    "pydantic-settings==2.13.1",        # 환경변수 기반 설정 관리

    # Test
    "pytest==9.0.3",                    # 테스트 프레임워크
    "pytest-asyncio==1.3.0",            # pytest 비동기 지원

    # Notebook (실험/탐색용)
    "notebook==7.5.5",                  # Jupyter Notebook 서버 (notebooks/ 디렉터리 사용)
    "ipywidgets==8.1.8",                # Jupyter 위젯 지원 (tqdm progress bar, interactive UI 등)

    # Dev utils
    "python-dotenv",                    # .env 파일 로더
]